# Prediction-Markets

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGES_BASED_SIGNAL_RESEARCH.md  CLAUDE.md  COMPANY_BETS_MONETIZATION.md  DATA_SOURCES.md  DEPLOYMENT.md  Dockerfile  HANDOFF.md  INGESTION.md  MONETIZATION_AND_RISK_NEUTRAL_BRIDGE.md  PLANNING.md  README.md  RESEARCH.md  docker-compose.yml  pyproject.toml  vercel.json
app/: __init__.py  config.py  digest.py  ingest.py  main.py
app/analysis/: __init__.py  changes.py  distribution.py  divergence.py  fed_funds.py  probability.py
app/api/: __init__.py  analyze.py  health.py  internal.py  markets.py
app/core/: __init__.py  db.py  errors.py  http.py  logging.py  middleware.py  rate_limit.py
app/markets/: __init__.py
app/markets/_shared/: __init__.py  cboe.py  density.py  deribit.py  rate_compare.py  rate_futures.py  rate_step.py  registry.py  threshold_compare.py  threshold_parse.py
app/markets/btc_price/: __init__.py  divergence.py  register.py  source.py
app/markets/ecb_rates/: __init__.py  divergence.py  register.py  source.py
app/markets/eth_price/: __init__.py  divergence.py  register.py  source.py
app/markets/fed_rates/: __init__.py  analysis.py  divergence.py  register.py  source.py
app/markets/nasdaq_price/: __init__.py  divergence.py  register.py  source.py
app/models/: __init__.py  company.py  digest.py  domain.py  provenance.py  requests.py  responses.py
app/notifications/: email.py
app/persistence/: __init__.py  migrate.py  repository.py  schema.sql
app/services/: __init__.py  analysis_service.py  company_scan.py  digest_render.py  digest_service.py  discovery_service.py  gateway.py  ingestion_service.py  pricing.py
app/sources/: __init__.py  _util.py  cme_fedfunds.py  kalshi.py  polymarket_clob.py  polymarket_gamma.py
frontend/: index.html
research/: _common.py  _merger_discover.py  company_liquidity.py  equity_eventstudy.py  equity_leadlag.py  leadlag.py  merger_arb.py  mosaic_tiles.py  requirements.txt
tests/: fakes.py  test_analyze_e2e.py  test_config.py  test_health.py  test_models.py
tests/analysis/: test_changes.py  test_distribution.py  test_divergence.py  test_fed_funds.py  test_probability.py
tests/api/: test_endpoints.py
tests/markets/: test_density.py  test_threshold_parse.py
tests/markets/btc_price/: test_divergence.py  test_source.py
tests/markets/ecb_rates/: test_divergence.py  test_source.py
tests/markets/eth_price/: test_divergence.py  test_source.py
tests/markets/fed_rates/: test_analysis.py  test_divergence.py  test_source.py
tests/markets/nasdaq_price/: test_divergence.py  test_source.py
tests/persistence/: test_postgres_integration.py  test_repository_contract.py
tests/services/: test_analysis_service.py  test_company_scan.py  test_digest.py  test_ingestion_service.py  test_microstructure.py
tests/sources/: test_cme_fedfunds.py  test_kalshi.py  test_polymarket_clob.py  test_polymarket_gamma.py
