[project]
name = "prediction-market-api"
version = "0.1.0"
description = "Read-only prediction-market analysis API (Polymarket + Kalshi) -> probabilities -> Postgres."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# v2 on-chain smart-money enrichment; only needed if you enable the Polygon reader.
onchain = ["web3>=6.15"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ingest = "app.ingest:main"

[tool.vercel]
# Vercel's Python runtime loads this ASGI app as the function handler.
# (app/main.py also matches the auto-detected "main.py inside app/" convention;
# this makes it explicit and drift-proof.)
entrypoint = "app.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# v1 packages only. app.llm is a v2 seam (see ARCHITECTURE.md) — add it back when built.
packages = [
    "app",
    "app.core",
    "app.models",
    "app.sources",
    "app.analysis",
    "app.persistence",
    "app.services",
    "app.api",
    "app.notifications",
]

[tool.setuptools.package-data]
"app.persistence" = ["schema.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP017 suggests datetime.UTC (3.11+); we keep timezone.utc for broad compatibility.
ignore = ["UP017"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
ignore_missing_imports = true
